# celery_bundle

./: .travis.yml  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.py
celery_bundle/: __init__.py
tests/: test_bundle.py  test_public_properties.py
