[tool.poetry]
name = "reportal-match-importer-service"
version = "0.1.0"
description = ""
authors = ["Alvaro Garcia <agarcia@bmat.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.7"
applauncher = "^2.0.0"
celery = "^5.0.5"
reportal-match-importer = "^0.1.16"
mongodb-bundle = "^2.0.1"
reportal-model = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tvav"
url = "http://installer:installer@extrapypi.bmat.tvav/simple/"
