[tool.poetry]
name = "celery_bundle"
version = "2.0.0"
description = ""
authors = ["Alvaro Garcia <maxpowel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
applauncher = "^2.0.0"
celery = "^5.0.5"
dependency-injector = "^4.32.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
